# CS370-Team3

./: .gitattributes  .gitignore  .gitignore.save  README.md  createclass.cpp  data.cpp  data.h  helperfunctions.pro  main.cpp  scheduler.cpp  scheduler.h
370-project/: .gitignore.backup  CMakeLists.txt  Main Palette.xml  MainPalette.xml  README.md  apimap.cpp  apimap.h  app_icon.rc  class_info_unit.cpp  class_info_unit.h  class_info_unit.ui  class_result.cpp  class_result.h  class_result.ui  class_search.ui  class_search_v2.ui  createclass.cpp  createclass.h  createclass.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  new palette.xml  resources.qrc  savestuff.cpp  savestuff.h  schedulelogic.cpp  schedulelogic.h  search.cpp  search.h  search.ui  search_window.cpp  search_window.h  search_window.ui  warning.cpp  warning.h  warning.ui
370-project/370-Project/: CMakeLists.txt  blue gray pallete.xml  createclass.cpp  createclass.h  createclass.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
370-project/class_finder/: subjects.csv
370-project/class_finder/data/: CSUSM-Buildings.csv  subjects.csv
370-project/data/: csusm_classes.csv  filtered_csusm_classes.csv  subjects.csv
370-project/data/data/: csusm_classes.csv
370-project/tests/: TC01_CheckBoxesInitialState.cpp  TC02_AddClassToSchedule.cpp  TC02_AddClassToSchedule.cpp.save  TC03_ScheduleConflictDetection.cpp  TC04_TimeComparison.cpp  TC05_ClearAllClasses.cpp  TC06_UILoadsClassData.cpp  TC07_SaveScheduleToFile.cpp  TC08_ScheduleLogicValidation.cpp  TC09_ClassInfoFrameData.cpp  TC10_SaveFeatureFileCheck.cpp  tc01_add_valid_class.h
Building Database/: CSUSM-Buildings.xlsx  README.txt
Class Database/: README.txt  data_extractor.py  data_extractor.spec
Class Database/data/: csusm_classes.csv  csusm_classes.xlsx  data_extractor.py
WhatAmIDoing/: createclass.cpp  createclass.h  createclass.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
